--- a/.gitignore
+++ b/.gitignore
@@ -26,7 +26,7 @@ phpunit.phar
 # local phpunit config
 /phpunit.xml
 
-runtime/debug/
-runtime/logs/
-runtime/cache/
-runtime/mail/
+runtime/debug/*
+runtime/logs/*
+runtime/cache/*
+runtime/mail/*
