--- a/composer.json
+++ b/composer.json
@@ -46,6 +46,10 @@
 		],
 		"executable": [
 			"yii"
-		]
+		],
+		"asset-installer-paths": {
+			"npm-asset-library": "vendor/npm",
+			"bower-asset-library": "vendor/bower"
+		}
 	}
 }
